@@ -1,4 +1,4 @@
-$Id: CHANGELOG,v 1.5 1995-08-28 12:50:51 adam Exp $
+$Id: CHANGELOG,v 1.6 1995-10-16 17:00:51 adam Exp $
 
 06/19/95 Release of ir-tcl-1.0b
 ------------------------------------------------------
@@ -50,3 +50,5 @@ $Id: CHANGELOG,v 1.5 1995-08-28 12:50:51 adam Exp $
 08/24/95 IrTcl works with tk4.0 and tcl7.4.
 
 08/28/95 Release of ir-tcl-1.0b2
+------------------------------------------------------
+10/16/95 New setting: ElementSetNames.
